--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "mapbox-gl": "^2.10.0",
     "material-icons": "^1.12.1",
     "node-sass": "^7.0.3",
     "vue": "^3.2.13",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/mapbox-gl": "^2.7.7",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
